# Quasarr

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Quasarr.py  README.md  check_gemini_bugs.py  cli_tester.py  maintenance.py  pre-commit.py  pyproject.toml
.github/: Changelog.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: Beta.yml  BuildImage.yml  CreateRelease.yml  HostnameRedaction.yml  PrVersionBumpCheck.yml  PullRequests.yml  Release.yml
docker/: Dockerfile  dev-services-compose.yml  dev-setup.md  docker-compose.yml
quasarr/: __init__.py
quasarr/api/: __init__.py
quasarr/api/arr/: __init__.py
quasarr/api/captcha/: __init__.py
quasarr/api/config/: __init__.py
quasarr/api/jdownloader/: __init__.py
quasarr/api/sponsors_helper/: __init__.py
quasarr/api/statistics/: __init__.py
quasarr/constants/: __init__.py
quasarr/downloads/: __init__.py  mirror_filters.py
quasarr/downloads/linkcrypters/: al.py  filecrypt.py  hide.py
quasarr/downloads/sources/: __init__.py  al.py  at.py  by.py  dd.py  dj.py  dl.py  dt.py  dw.py  hd.py  he.py  hs.py  mb.py  nk.py  nx.py  sf.py  sj.py  sl.py  wd.py  wx.py
quasarr/downloads/sources/helpers/: __init__.py  abstract_source.py  download_release.py  junkies.py
quasarr/providers/: auth.py  cloudflare.py  hostname_issues.py  html_images.py  html_templates.py  imdb_metadata.py  jd_cache.py  log.py  myjd_api.py  notifications.py  obfuscated.py  shared_state.py  statistics.py  utils.py  version.py  web_server.py  xem_metadata.py
quasarr/providers/notifications/: __init__.py  discord.py  notification_types.py  telegram.py
quasarr/providers/notifications/helpers/: __init__.py
quasarr/providers/sessions/: al.py  dd.py  dl.py  nx.py
quasarr/search/: __init__.py
quasarr/search/sources/: __init__.py  al.py  at.py  by.py  dd.py  dj.py  dl.py  dt.py  dw.py  fx.py  hd.py  he.py  hs.py  mb.py  nk.py  nx.py  sf.py  sj.py  sl.py  wd.py  wx.py
quasarr/search/sources/helpers/: __init__.py  abstract_source.py  release.py  search_release.py  search_source.py
quasarr/storage/: categories.py  config.py  setup.py  sqlite_database.py
quasarr/storage/setup/: __init__.py  flaresolverr.py  hostnames.py  jdownloader.py  notifications.py  path.py  timeouts.py
tests/: test_mirror_filters.py
