[project]
name = "quasarr"
dynamic = ["version"]
description = "Quasarr connects JDownloader with Radarr, Sonarr and LazyLibrarian. It also decrypts links protected by CAPTCHAs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bottle>=0.13.4",
    "dukpy>=0.5.0",
    "pillow>=12.1.0",
    "pycryptodomex>=3.23.0",
    "requests>=2.32.5",
]
authors = [
    { name = "rix1337", email = "rix1337@users.noreply.github.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
quasarr = "quasarr:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "quasarr/providers/version.py"

[tool.hatch.build.targets.wheel]
packages = ["quasarr"]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
build = [
    "pyinstaller>=6.18.0",
    "pillow>=12.1.0",
]

[tool.ruff]
# This covers syntax and logic (F) + import sorting (I)
lint.select = ["F", "I"]
lint.fixable = ["F", "I"]
lint.ignore = ["E"]

[tool.ruff.lint.isort]
known-first-party = ["quasarr"]
