[project]
name = "quasarr"
dynamic = ["version"]
description = "Quasarr connects JDownloader with Radarr, Sonarr and LazyLibrarian. It also decrypts links protected by CAPTCHAs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bottle>=0.13.4",
    "dukpy>=0.5.0",
    "loguru>=0.7.3",
    "pillow>=12.1.0",
    "pycryptodomex>=3.23.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "wcwidth>=0.5.3",
]
authors = [
    { name = "rix1337", email = "rix1337@users.noreply.github.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
quasarr = "quasarr:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "quasarr/providers/version.py"

[tool.hatch.build.targets.wheel]
packages = ["quasarr"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
    "questionary>=2.1.1",
    "rich>=14.3.2",
]
build = [
    "pyinstaller>=6.18.0",
    "pillow>=12.1.0",
]

[tool.ruff]
# F   = Pyflakes (Critical: F821 catches undefined names)
# I   = Isort (Import sorting)
# PLE = Pylint Errors (Catches robust logic errors like used-before-assignment)
# B   = Bugbear (Catches common runtime crash bugs and potential logical errors)
lint.select = ["F", "I", "PLE", "B"]
lint.fixable = ["F", "I"]
lint.ignore = ["E"]

[tool.ruff.lint.isort]
known-first-party = ["quasarr"]
